# ML_Project_SEA_815441

./: .gitignore  EDA copia.ipynb  EDA.ipynb  README.md  idea_andrea.ipynb  main copia.ipynb  main.ipynb  main_executed.ipynb  modelling.ipynb  modelling_2.ipynb  pipeline.ipynb  pipeline_executed.ipynb  pyproject.toml  requirements.txt
data/: EDA_Lab_Complete.ipynb  instructions.md  project_pipeline.md  project_rules.md
