[project]
name = "ml-project-sea-815441"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "ruptures>=1.1.9",
    "pingouin>=0.5.5",
    "shap>=0.46.0",
]
